@@ -20,4 +20,18 @@ class TC_OpenStruct < Test::Unit::TestCase
     o2.instance_eval{@table = {:a => 'b'}}
     assert_not_equal(o1, o2)
   end
+  
+  def test_inspect
+    foo = OpenStruct.new
+    assert_equal("#<OpenStruct>", foo.inspect)
+    foo.bar = 1
+    foo.baz = 2
+    assert_equal("#<OpenStruct bar=1, baz=2>", foo.inspect)
+
+    foo = OpenStruct.new
+    foo.bar = OpenStruct.new
+    assert_equal('#<OpenStruct bar=#<OpenStruct>>', foo.inspect)
+    foo.bar.foo = foo
+    assert_equal('#<OpenStruct bar=#<OpenStruct foo=#<OpenStruct ...>>>', foo.inspect)
+  end
 end
