@@ -2,7 +2,7 @@
 #define RUBY_RELEASE_DATE "2009-05-26"
 #define RUBY_VERSION_CODE 187
 #define RUBY_RELEASE_CODE 20090526
-#define RUBY_PATCHLEVEL 161
+#define RUBY_PATCHLEVEL 162
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
